CHANGED:varbinary jdbctemplate modification;